--- a/src/app/modules/portfolio/components/header/header.component.html
+++ b/src/app/modules/portfolio/components/header/header.component.html
@@ -1,1 +1,57 @@
-<p>header works!</p>
+<header>
+  <img
+  src="assets/img/hugo.png"
+  alt="Hugo Silva - Foto de Perfil"
+  width="130px"
+  height="130px"
+  loading="eager"
+  />
+</header>
+<aside>
+  <div class="container">
+    <p>Desenvolvedor Java | Angular | Spring Framework </p>
+    <p>Brasília, Distrito Federal, Brasil</p>
+    <p>
+      Tenho cerca de 3 anos de experiência em desenvolvimento, durante esse tempo tenho focado no ecossistema Java,
+      sempre tentando me manter informado sobre as últimas tendências e tecnologias emergentes, o que me permite
+      trazer soluções inovadoras e eficazes para os projetos em que atuo.
+    </p>
+    <nav>
+      <ul>
+        <li>
+          <a href="assets/pdf/cv.pdf" target="_blank" class="btn btn-primary">Download CV</a>
+        </li>
+        <li>
+          <a href="https://github.com/yhugorocha" target="_blank" class="btn btn-primary">GitHub</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/hugo-rocha-a9b1bb201/" target="_blank" class="btn btn-primary">LinkedIn</a>
+        </li>
+      </ul>
+    </nav>
+    <section>
+      <figure>
+        <img
+        src="assets/icons/whatsapp.png"
+        alt="Icone para contato WhatsApp"
+        width="22px"
+        height="22px"
+        />
+        <figcaption>
+          <a href="https://w.app/mtohaJ" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+        </figcaption>
+      </figure>
+      <figure>
+        <img
+        src="assets/icons/gmail.png"
+        alt="Icone para contato E-mail"
+        width="22px"
+        height="22px"
+        />
+        <figcaption>
+          <p>E-mail: yhugorocha&#64;gmail.com</p>
+        </figcaption>
+      </figure>
+    </section>
+  </div>
+</aside>
